# mastering-c

./: README.md
K-R-exercises/: chapter2.c  ex3_2.c  ex3_3.c  ex3_4.c  ex3_5.c
K-R-exercises/include/: chapter3.h
K-R-solutions/: CMakeLists.txt  README.md
K-R-solutions/ch01/: ex1_20.c  ex1_21.c
K-R-solutions/ch02/: chapter2.c  ex2_1.c  ex2_10.c  ex2_2.c  ex2_3.c  ex2_4.c  ex2_5.c  ex2_6.c  ex2_7.c  ex2_8.c  ex2_9.c
K-R-solutions/ch03/: ex3_1.c  ex3_2.c  ex3_3.c  ex3_4.c  ex3_5.c  ex3_6.c
K-R-solutions/ch04/: ex4_1.c  ex4_10.c  ex4_11.c  ex4_12.c  ex4_13.c  ex4_14.c  ex4_2.c  ex4_3.c  ex4_4.c  ex4_5.c  ex4_6.c  ex4_7.c  ex4_8.c  ex4_9.c
K-R-solutions/ch05/: ex5_1.c  ex5_10.c  ex5_11.c  ex5_2.c  ex5_3.c  ex5_4.c  ex5_5.c  ex5_7.c  ex5_8.c  ex5_9.c
K-R-solutions/ch05/ex5_6/: functions.c  functions.h  main.c
K-R-solutions/extra/: playing.c
K-R-solutions/utils/: utils.c  utils.h
books/k&R-exercises/: ex3_5.c
books/k&R-exercises/include/: chapter3.h
books/learning-c-and-soc/: J. Davidson, Kate Gregory - Beautiful C++_ 30 Core Guidelines for Writing Clean, Safe, and Fast Code-Addison-Wesley Professional (2021) (1).epub
k&R-exercises/: ex3_1.c  ex3_2.c  ex3_3.c  ex3_4.c
