cmake_minimum_required(VERSION 3.22.1)

project(k-R)

# Build information
message(STATUS "Build Configuration: ${CMAKE_BUILD_TYPE}")
message(STATUS "Build executables in: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

# Source directories
set(CH03_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch03)
set(CH04_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch04)
set(CH05_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch05)

# Create the executables
add_executable(ex3_1 ${CH03_DIR}/ex3_1.c)
add_executable(ex3_2 ${CH03_DIR}/ex3_2.c)
add_executable(ex3_3 ${CH03_DIR}/ex3_3.c)
add_executable(ex3_4 ${CH03_DIR}/ex3_4.c)
add_executable(ex3_5 ${CH03_DIR}/ex3_5.c)
add_executable(ex3_6 ${CH03_DIR}/ex3_6.c)
add_executable(ex4_1 ${CH04_DIR}/ex4_1.c)
add_executable(ex4_2 ${CH04_DIR}/ex4_2.c)
add_executable(ex4_3 ${CH04_DIR}/ex4_3.c)
add_executable(ex4_4 ${CH04_DIR}/ex4_4.c)
add_executable(ex4_5 ${CH04_DIR}/ex4_5.c)
add_executable(ex4_6 ${CH04_DIR}/ex4_6.c)
add_executable(ex4_7 ${CH04_DIR}/ex4_7.c)
add_executable(ex4_8 ${CH04_DIR}/ex4_8.c)
add_executable(ex4_9 ${CH04_DIR}/ex4_9.c)
add_executable(ex4_10 ${CH04_DIR}/ex4_10.c)
add_executable(ex4_11 ${CH04_DIR}/ex4_11.c)
add_executable(ex4_12 ${CH04_DIR}/ex4_12.c)
add_executable(ex4_13 ${CH04_DIR}/ex4_13.c)
add_executable(ex4_14 ${CH04_DIR}/ex4_14.c)
add_executable(ex5_1 ${CH05_DIR}/ex5_1.c)
add_executable(ex5_2 ${CH05_DIR}/ex5_2.c)
add_executable(ex5_3 ${CH05_DIR}/ex5_3.c)
add_executable(ex5_4 ${CH05_DIR}/ex5_4.c)

# Add subdirectory to the build
add_subdirectory(utils)

# Link library to executables
target_link_libraries(ex3_3 utils)
target_link_libraries(ex3_4 utils)
target_link_libraries(ex3_5 utils)
target_link_libraries(ex3_6 utils)
target_link_libraries(ex4_1 utils)
target_link_libraries(ex4_2 utils)
target_link_libraries(ex4_3 utils)
target_link_libraries(ex4_4 utils)
target_link_libraries(ex4_5 utils)
target_link_libraries(ex4_7 utils)
target_link_libraries(ex4_10 utils)
target_link_libraries(ex5_1 utils)
target_link_libraries(ex5_2 utils)
target_link_libraries(ex5_3 utils)
target_link_libraries(ex5_4 utils)

# Include directory to executables (for header files)
target_include_directories(ex3_3 PRIVATE utils)
target_include_directories(ex3_4 PRIVATE utils)
target_include_directories(ex3_5 PRIVATE utils)
target_include_directories(ex3_6 PRIVATE utils)
target_include_directories(ex4_1 PRIVATE utils)
target_include_directories(ex4_2 PRIVATE utils)
target_include_directories(ex4_3 PRIVATE utils)
target_include_directories(ex4_4 PRIVATE utils)
target_include_directories(ex4_5 PRIVATE utils)
target_include_directories(ex4_7 PRIVATE utils)
target_include_directories(ex4_10 PRIVATE utils)
target_include_directories(ex5_1 PRIVATE utils)
target_include_directories(ex5_2 PRIVATE utils)
target_include_directories(ex5_3 PRIVATE utils)
target_include_directories(ex5_4 PRIVATE utils)